-----------------------------------------------------

0.01  2015-05-28
  - Production ready version of Mojolicious::Plugin::Restify.