@@ -1,0 +1,11 @@
+language: perl
+perl:
+  - "5.20"
+env:
+  - "HARNESS_OPTIONS=j9 TEST_POD=1"
+install:
+  - "cpanm -n Test::Pod Test::Pod::Coverage"
+  - "cpanm -n --installdeps ."
+sudo: false
+notifications:
+  email: true
